--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "LiveChat.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i LiveChat/LiveChat.js -o dist/LiveChat.min.js",
+    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i LiveChat/LiveChat.js -o dist/LiveChat.js",
     "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i LiveChat/LiveChat.js -o dist/LiveChat.js"
   },
   "repository": {
